fixed gradien transparency issues for safari

--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@
       backface-visibility: hidden;
     }
     .cover-left {
-      background-image: linear-gradient(to right, white, transparent 100%);
+      background-image: linear-gradient(to right, white, rgba(255, 255, 255, 0) 100%);
     }
     .cover-left-slider {
-      background-image: linear-gradient(to right, white 10%, transparent 100%);
+      background-image: linear-gradient(to right, white 10%, rgba(255, 255, 255, 0) 100%);
     }
     .cover-right {
-      background: linear-gradient(to left, white, transparent 100%);
+      background: linear-gradient(to left, white, rgba(255, 255, 255, 0) 100%);
     }
     .cover-right-slider {
-      background: linear-gradient(to left, white 10%, transparent 100%);
+      background: linear-gradient(to left, white 10%, rgba(255, 255, 255, 0) 100%);
     }
     .shadow {
        -moz-box-shadow:    inset 0 0 40px 20px #ffffff;
