fixed padding for recent work

--- a/scientific-illustration.html
+++ b/scientific-illustration.html
@@ -17,6 +17,9 @@
     .b--lighter-gray {
       border-color: #fcfcfc !important;
     }
+    .mw-featured {
+      max-width: 90rem;
+    }
   }
   </style>
 </head>
@@ -69,10 +72,10 @@
     </div>
   </section>
   <section class="bg-white bt b--moon-gray w-100 mt0 pb5-ns pb4 relative">
-    <div class="mw9 w-100 center pl5-l pr5-l pl2 pr2 pt2 pt0-ns relative z-1">
+    <div class="mw9 w-100 center featured-padding pl2 pr2 pt2 pt0-ns relative z-1">
       <p class="f4-ns f5 mw6 center mt5-ns mt4 lh-copy">However, accuracy isn't sufficient—an illustration should be attractive as well! Captivating artwork inspires the imagination and leaves the viewer curious to learn more.</p>
       <p class="f2-ns f3 mw6 center tc mt5-ns mt4 lh-copy mb3">Recent work:</p>
-      <div class="w-100 dt-ns">
+      <div class="w-100 dt-ns mw-featured center">
         <div class="w-third-ns pa3-l pa2 dtc-ns">
           <div class="pa1 pb0 bg-white shadow-3 relative">
             <img src="images/illustration/cover@1x.jpg"
