--- a/scientific-illustration.html
+++ b/scientific-illustration.html
@@ -21,6 +21,9 @@
       max-width: 90rem;
     }
   }
+  .card-shadow {
+    box-shadow: 0 1px 1px 0 rgba(60,64,67,.08), 0 1px 3px 1px rgba(60,64,67,.16)
+  }
   </style>
 </head>
 <body class="sans-serif w-100 center black-70 f6 bg-white">
