--- a/technical-graphics.html
+++ b/technical-graphics.html
@@ -18,6 +18,9 @@
       border-color: #fcfcfc !important;
     }
   }
+  .card-shadow {
+    box-shadow: 0 1px 1px 0 rgba(60,64,67,.08), 0 1px 3px 1px rgba(60,64,67,.16)
+  }
   </style>
 </head>
 <body class="sans-serif w-100 center black-70 f6 bg-white">
@@ -74,7 +77,7 @@
     <p class="f3-ns f4 mw6 center mt4 lh-copy center tc mt5-ns mt4">We specialize in:</p>
     <div class="w-100 cf mt4">
     <div class="w-50-ns w-100 fl-ns pa3">
-      <div class="w-100 pa1 pb0 ba b--moon-gray shadow-3 mw6 center relative">
+      <div class="w-100 pa1 pb0 ba b--moon-gray card-shadow mw6 center relative">
         <img src="images/technical-graphics/polyethylene@1x.png"
              srcset="images/technical-graphics/polyethylene@1x.png 1x, images/technical-graphics/polyethylene@2x.png 2x"
              alt="Cartoon of polyethylene molecule.">
@@ -84,7 +87,7 @@
       </div>
     </div>
     <div class="w-50-ns w-100 fl-ns pa3">
-      <div class="w-100 pa1 pb0 ba b--moon-gray shadow-3 mw6 center relative">
+      <div class="w-100 pa1 pb0 ba b--moon-gray card-shadow mw6 center relative">
         <img src="images/technical-graphics/microscope@1x.jpg"
              srcset="images/technical-graphics/microscope@1x.jpg 1x, images/technical-graphics/microscope@2x.jpg 2x"
              alt="Line drawing of microscope.">
@@ -94,7 +97,7 @@
       </div>
     </div>
     <div class="w-50-ns w-100 fl-ns pa3">
-      <div class="w-100 pa1 pb0 ba b--moon-gray shadow-3 mw6 center relative">
+      <div class="w-100 pa1 pb0 ba b--moon-gray card-shadow mw6 center relative">
         <img src="images/technical-graphics/vapor-cell-cropped@1x.jpg"
              srcset="images/technical-graphics/vapor-cell-cropped@1x.jpg 1x, images/technical-graphics/vapor-cell-cropped@2x.jpg 2x"
              alt="Diagram of atomic vapor cell.">
@@ -104,7 +107,7 @@
       </div>
     </div>
     <div class="w-50-ns w-100 fl-ns pa3">
-      <div class="w-100 pa1 pb0 ba b--moon-gray shadow-3 mw6 center relative">
+      <div class="w-100 pa1 pb0 ba b--moon-gray card-shadow mw6 center relative">
         <img src="images/technical-graphics/solarspectra-color@1x.png"
              srcset="images/technical-graphics/solarspectra-color@1x.png 1x, images/technical-graphics/solarspectra-color@2x.png 2x"
              alt="Illustration of device for collecting solar spectra.">
@@ -118,7 +121,7 @@
   <section class="bg-white bt b--white w-100 mt0 pb5-ns pb4 relative">
     <div class="mw9 w-100 center pl5-l pr5-l pl2 pr2 relative z-1">
       <p class="f2-ns f3 mw6 center tc mt0 lh-copy mt4">Recent work:</p>
-      <div class="w-100 mw7 center tc ba b--moon-gray shadow-3 pa2 bg-white relative">
+      <div class="w-100 mw7 center tc ba b--moon-gray card-shadow pa2 bg-white relative">
         <img src="images/technical-graphics/neutron-detector@1x.jpg"
              srcset="images/technical-graphics/neutron-detector@1x.jpg 1x, images/technical-graphics/neutron-detector@2x.jpg 2x"
              alt="Illustration of calibration stages for portable neutron flux monitor.">
