--- a/explanatory-animation.html
+++ b/explanatory-animation.html
@@ -54,7 +54,7 @@
     <div class="mw8 w-100 center pa2 pr4-l pl4-l">
       <p class="f2-ns f3 mw6 center tc-ns mt5-ns mt4 lh-copy mb3">Sometimes words fall short.</p>
       <p class="f4-ns f5 mw6 center mt4 lh-copy">Even with an eloquent vocabulary, it can be difficult to describe how something looks—especially when dealing with a complex process or unfamiliar phenomenon.</p>
-      <p class="f4-ns f5 mw6 center mt4 lh-copy">An appropriate animation can fill conceptual gaps, supporting a description by providing hard-to-visualize details.</p>
+      <p class="f4-ns f5 mw6 center mt4 lh-copy">An animation can fill conceptual gaps, supporting a description by providing hard-to-visualize details.</p>
       <div class="w-100 mt5-ns mt4 mw7 center relative padding-drumhead">
         <div class="lh-copy ma4 pa4 pt2 pb2 mt0-l mw6 center ba b--moon-gray bg-lighter-gray card-shadow"><h4 class="tc">Drumhead modes</h4><p><span class="b">"</span>A two-dimensional elastic membrane under tension can support transverse vibrations. The properties of an idealized drumhead can be modeled by the vibrations of a circular membrane of uniform thickness, attached to a rigid frame. Due to the phenomenon of resonance, at certain vibration frequencies, its resonant frequencies, the membrane can store vibrational energy, the surface moving in a characteristic pattern of standing waves. This is called a normal mode. A membrane has an infinite number of these normal modes, starting with a lowest frequency one called the fundamental mode.<span class="b">"</span></p>
           <p class="tr pr4 f7">Source: <a href="https://en.wikipedia.org/wiki/Vibrations_of_a_circular_membrane" target="_blank">Wikipedia</a></p>
