hide form if javascript is disabled

--- a/contact.html
+++ b/contact.html
@@ -52,9 +52,9 @@
       </div>
     </div>
   </section>
-  <section class="w-100 overflow-hidden">
+  <section class="w-100 overflow-hidden dn hidden">
     <div class="w-100 center bg-white z-max relative pl4 pr4">
-      <p class="mw6 f4-ns f5 center mb0 dn hidden lh-copy">You can also tell us about your project using the form below:</p>
+      <p class="mw6 f4-ns f5 center mb0 lh-copy">You can also tell us about your project using the form below:</p>
     </div>
     <div class="center w-100">
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMqp5yoeMPsQOMsZVPsg2sv_l3OO5tgbyEy6tS5gcRvyWXKA/viewform?embedded=true" class="w-100 center tc relative z-1 db iframe-form" style="margin-top: -7rem;" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
