--- a/scientific-illustration.html
+++ b/scientific-illustration.html
@@ -122,9 +122,10 @@
   <section class="w-100 bt b--white">
     <div class="mw8 w-100 center mt4-ns mt3 relative z-max bg-white">
       <p class="tc mb0 f2-ns f3 dark-gray mt4">Want something illustrated?</p>
-      <p class="f4-ns f5 mt4-ns center mb0 dn hidden measure pl4 pr4 lh-copy">Email <a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">sean@inform.studio</a> or tell us about your project using the form below.</p>
+      <p class="f4-ns f5 mt4-ns center mb0 dn hidden measure pl4 pr4 lh-copy">Email <a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">sean@inform.studio</a> or tell us about your project using the form below:</p>
+      <noscript><p class="f4-ns f5 mt4-ns center mb0 measure pl4 pr4 lh-copy mb6-ns mb5">Email <a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">sean@inform.studio</a> with a brief description of your project.</p></noscript>
     </div>
-    <div class="center w-100">
+    <div class="center w-100 dn hidden">
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMqp5yoeMPsQOMsZVPsg2sv_l3OO5tgbyEy6tS5gcRvyWXKA/viewform?embedded=true" class="w-100 center tc relative z-1 db iframe-form" style="margin-top: -7rem;" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
   </section>
