small layout adjustments

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
   <header class="w-100">
     <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb0 mw8 center pa2"><b class="fw8">inform</b>studio</p></a>
   </header>
-  <section class="bt b--moon-gray w-100 mt0 mb5-ns mb4 ">
+  <section class="bt b--moon-gray w-100 mt0 mb4-ns mb3 ">
     <div class="mw8 w-100 center pl4 pr4">
       <p class="tc-ns f2-ns f3 pt4-ns pt2 dark-gray">Questions or project inquiries?</p>
       <div class="mw6 center">
@@ -54,10 +54,10 @@
   </section>
   <section class="w-100 overflow-hidden dn hidden">
     <div class="w-100 center bg-white z-max relative pl4 pr4">
-      <p class="mw6 f4-ns f5 center mb0 lh-copy">You can also tell us about your project using the form below:</p>
+      <p class="mw6 f4-ns f5 center mb0 lh-copy mt4">You can also tell us about your project using the form below:</p>
     </div>
     <div class="center w-100">
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMqp5yoeMPsQOMsZVPsg2sv_l3OO5tgbyEy6tS5gcRvyWXKA/viewform?embedded=true" class="w-100 center tc relative z-1 db iframe-form" style="margin-top: -7rem;" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMqp5yoeMPsQOMsZVPsg2sv_l3OO5tgbyEy6tS5gcRvyWXKA/viewform?embedded=true" class="w-100 center tc relative z-1 db iframe-form" style="margin-top: -8rem;" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
   </section>
   <footer>
