new site description

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang = "en">
 <head>
-  <title>Inform Scientific Illustration and Animation</title>
+  <title>Inform Studio – Scientific Illustration and Animation</title>
   <meta charset = "UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Inform is a scientific illustration and animation studio. We translate complex scientific phenomena into clear visual form.">
