--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html lang = "en">
 <head>
-  <title>Inform Studio – Scientific Illustration and Animation</title>
+  <title>Inform Studio – Science Illustration and Animation</title>
   <meta charset = "UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Inform is a scientific illustration and animation studio. We translate complex scientific phenomena into clear visual form.">
+  <meta name="description" content="Inform is a scientific illustration and animation studio. From technical illustrations to detailed animations, we translate complex scientific phenomena into clear visual form.">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="tachyons.min.css">
   <style>
