--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Inform Studio – Science Illustration and Animation</title>
   <meta charset = "UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Inform is a scientific illustration and animation studio. From technical illustrations to detailed animations, we translate complex scientific phenomena into clear visual form.">
+  <meta name="description" content="Inform is a science illustration and animation studio. From technical illustrations to detailed animations, we translate complex scientific phenomena into clear visual form.">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="tachyons.min.css">
   <style>
@@ -184,7 +184,7 @@
       <div class="hero bg-white shadow-3 ba b--moon-gray dn db-ns"></div>
       <div class="w-100 pb4-ns pb2 pl4-ns pl3 pl2-l pr4-ns pr3 relative">
         <div class="mw7-ns mw6 w-100 relative pr4-l pr6-m">
-          <p class="f1-l f2-m f3 pt4-ns pt2 mb3 dark-gray relative"><b class="inform">Inform</b> is a scientific illustration and animation studio.</p>
+          <p class="f1-l f2-m f3 pt4-ns pt2 mb3 dark-gray relative"><b class="inform">Inform</b> is a science illustration and animation studio.</p>
           <p class="f3-l f4-m f5 mw7 pr6-ns mr3 mt5-ns mt4 lh-copy">From technical illustrations to detailed animations, we translate complex scientific phenomena into clear visual form.</p>
         </div>
       </div>
