new site description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Inform Studio – Science Illustration and Animation</title>
   <meta charset = "UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Inform is a science illustration and animation studio. We translate complex scientific phenomena into clear visual form.">
+  <meta name="description" content="From journal covers and scientific illustration to technical graphics and explanatory animation, we translate scientific research into clear visual form.">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="tachyons.min.css">
   <style>
