--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 </head>
 <body class="sans-serif w-100 center black-70 f6 bg-white">
   <header class="w-100">
-    <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb0 mw8 center pa2"><b class="fw8">inform</b>studio</p></a>
+    <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb0 mw8 center pa2"><b class="fw8">inform</b>.studio</p></a>
   </header>
   <section class="bt b--moon-gray w-100 mt0 mb4-ns mb3 ">
     <div class="mw8 w-100 center pl4 pr4">
