updating instagram handle

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div class="w-100 dt mw6 pl5-ns pl6-m fr">
         <a class="f6 link dim ph2-ns ph1 pv3 mb2 black-80 v-mid w-20 tc dtc shrink br bn-ns b--dark-gray pl5-m" href="about.html"><p class="f3-ns f5 ma0">About</p></a>
         <a class="f6 link dim ph2-ns ph1 pv2 mb2 v-mid w-20 dtc shrink br bn-ns b--dark-gray" href="contact.html"><img class="w3-ns w2 v-mid o-80" src="images/icons/mail-square.svg"></a>
-        <a class="f6 link dim ph2-ns ph1 pv2-ns pv1 mb2 v-mid w-20 dtc shrink br bn-ns b--dark-gray" href="https://www.instagram.com/inform_science_studio/"><img class="w2-ns w1 v-mid o-80" src="images/icons/instagram_simple_icon.svg"></a>
+        <a class="f6 link dim ph2-ns ph1 pv2-ns pv1 mb2 v-mid w-20 dtc shrink br bn-ns b--dark-gray" href="https://www.instagram.com/inform.science.studio/"><img class="w2-ns w1 v-mid o-80" src="images/icons/instagram_simple_icon.svg"></a>
         <a class="f6 link dim ph2-ns ph1 pv2-ns pv1 mb2 v-mid w-20 dtc shrink" href="https://twitter.com/inform_studio"><img class="w2-ns w1 v-mid o-80" src="images/icons/twitter.svg"></a>
       </div>
     </div>
