disabled animated banner

--- a/index.html
+++ b/index.html
@@ -151,10 +151,11 @@
   </header>
   <div class="center pl4-l pr4-l">
     <section class="w-100 mt0 pb4-ns pb2 pl4-l grid-l center bg-white bt-ns bb-ns b--moon-gray overflow-hidden relative mb3-ns mb0 br2" style="z-index: 100;">
-      <div class="w-50-l tr tl-l w-100 right-0 h-100 bg-gray absolute fadein dn db-ns">
+      <div class="w-50-l tr tl-l w-100 right-0 h-100 bg-gray absolute dn db-ns">
+        <!-- fadein -->
         <img src="images/index/hero-image-1.jpg" id="f1">
-        <img src="images/index/hero-image-2.jpg" id="f2">
-        <img src="images/index/hero-image-3.jpg" id="f3">
+        <!-- <img src="images/index/hero-image-2.jpg" id="f2">
+        <img src="images/index/hero-image-3.jpg" id="f3"> -->
       </div>
       <div class="hero bg-white shadow-3 ba b--moon-gray dn db-ns"></div>
       <div class="w-100 pb4-ns pb2 pl4-ns pl3 pl2-l pr4-ns pr3 relative">
