--- a/scientific-illustration.html
+++ b/scientific-illustration.html
@@ -93,7 +93,7 @@
             <a href="http://inform.studio/images/illustration/cover-large.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br2 pa1 pr2 right-0 o-90 pointer"><img src="images/icons/expand.svg" class="o-70"></div></a>
           </div>
           <p class="f6 tc b mb1">Quantum phase switch</p>
-          <p class="f7 tc mt0">Client: University of Maryland</p>
+          <p class="f7 tc mt0">Created for: University of Maryland</p>
         </div>
         <div class="w-third-ns pa3-l pa2 dtc-ns">
           <div class="pa1 pb0 bg-white shadow-3 relative">
@@ -103,7 +103,7 @@
             <a href="http://inform.studio/images/illustration/nanowire@2x.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br2 pa1 pr2 right-0 o-90 pointer"><img src="images/icons/expand.svg" class="o-70"></div></a>
           </div>
           <p class="f6 tc b mb1">Gallium-nitride nanowire LED</p>
-          <p class="f7 tc mt0">Client: National Institute of Standards and Technology</p>
+          <p class="f7 tc mt0">Created for: National Institute of Standards and Technology</p>
         </div>
         <div class="w-third-ns pa3-l pa2 dtc-ns">
           <div class="pa1 pb0 bg-white shadow-3 relative">
@@ -113,7 +113,7 @@
             <a href="http://inform.studio/images/illustration/atomlens-large.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br2 pa1 pr2 right-0 o-90 pointer"><img src="images/icons/expand.svg" class="o-70"></div></a>
           </div>
           <p class="f6 tc b mb1">Optics for single-atom imaging</p>
-          <p class="f7 tc mt0">Client: Joint Quantum Institute</p>
+          <p class="f7 tc mt0">Created for: Joint Quantum Institute</p>
         </div>
       </div>
     </div>
